--- a/books/BJZD/index.html
+++ b/books/BJZD/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>
 	北京折叠</h1>
-	<pre>
+	<pre class=pre>
 （1）
 清晨4:50，老刀穿过熙熙攘攘的步行街，去找彭蠡。
 从垃圾站下班之后，老刀回家洗了个澡，换了衣服。白色衬衫和褐色裤子，这是他唯一一套体面衣服 
@@ -32,7 +32,7 @@
 的一切嘈杂而庸常，和每个清晨一样。
 “哎，你们知道那儿一盘回锅肉多少钱吗？”那个叫小李的少年说。
 “靠，菜里有沙子。”另外一个叫小丁的胖少年突然捂住嘴说，他的指甲里还带着黑泥，“坑人啊。 
-得找老板退钱！”http://blog.sina.com.cn/zhetiantxt
+得找老板退钱！”
 “人家那儿一盘回锅肉，就三百四。”小李说，“三百四！一盘水煮牛肉四百二呢。”
 “什么玩意？这么贵。”小丁捂着腮帮子咕哝道。
 另外两个少年对谈话没兴趣，还在埋头吃面，小李低头看着他们，眼睛似乎穿过他们，看到了某个看 
