--- a/books/BJZD/index.html
+++ b/books/BJZD/index.html
@@ -9,8 +9,7 @@
 <body>
 	<h1>
 	北京折叠</h1>
-	<p>
-
+	<pre style="font-family:MICROSOFT YAHEI">
 （1）
 
 清晨4:50，老刀穿过熙熙攘攘的步行街，去找彭蠡。
@@ -554,6 +553,6 @@
 
 
 
-	</p>
+	</pre>
 </body>
 </html>
